--- a/web/style2.css
+++ b/web/style2.css
@@ -308,7 +308,6 @@ img.thinborder
     border-right: 1px solid #c0c0ff;
     background-image: url(sooda_nav.jpg);
     background-repeat: no-repeat;
-    height: 100%;
 }
 
 @media print
@@ -457,6 +456,7 @@ table.navbuttons td
 table.navtable
 {
     width: 100%;
+    height: 100%;
 }
 
 
@@ -467,3 +467,27 @@ table.navtable
     right: 10px;
 }
 
+.underconstruction
+{
+    color: red;
+    font-size: 10px;
+}
+
+#googlesearch
+{
+    position: absolute;
+    top: 4px;
+    right: 10px;
+}
+
+td.logobutton
+{
+    text-align: right;
+    padding-top: 5px;
+    padding-right: 20px;
+}
+
+tr.navtablespacer
+{
+    height: 100px;
+}
