--- a/web/syntax.css
+++ b/web/syntax.css
@@ -7,8 +7,8 @@ html, body.example
 
 pre.csharp
 {
-    font-family: Tahoma;
-    font-size: 11px;
+    font-family: Courier New;
+    font-size: 8pt;
     font-color: #606060;
     /* border: 1px solid #e0e0e0; */
     white-space: -moz-pre-wrap;  /* Mozilla, supported since 1999 */
@@ -16,21 +16,36 @@ pre.csharp
     white-space: -o-pre-wrap;    /* Opera 7 */
     white-space: pre-wrap;       /* CSS3 - Text module (Candidate Recommendation) */
     word-wrap: break-word;       /* IE 5.5+ */
-    padding: 8px;
-
+    padding: 4pt;
+    background-color: #f0f0ff;
 }
 
 pre.xml
 {
-    font-family: Tahoma;
-    font-size: 11px;
+    font-family: Courier New;
+    font-size: 8pt;
     font-color: #606060;
     white-space: -moz-pre-wrap;  /* Mozilla, supported since 1999 */
     white-space: -pre-wrap;      /* Opera 4 - 6 */
     white-space: -o-pre-wrap;    /* Opera 7 */
     white-space: pre-wrap;       /* CSS3 - Text module (Candidate Recommendation) */
     word-wrap: break-word;       /* IE 5.5+ */
-    padding: 8px;
+    padding: 4pt;
+    background-color: #f0f0ff;
+}
+
+pre.sql
+{
+    font-family: Courier New;
+    font-size: 8pt;
+    font-color: #606060;
+    white-space: -moz-pre-wrap;  /* Mozilla, supported since 1999 */
+    white-space: -pre-wrap;      /* Opera 4 - 6 */
+    white-space: -o-pre-wrap;    /* Opera 7 */
+    white-space: pre-wrap;       /* CSS3 - Text module (Candidate Recommendation) */
+    word-wrap: break-word;       /* IE 5.5+ */
+    padding: 4pt;
+    background-color: #f0f0ff;
 }
 
 .csharp .k
@@ -109,13 +124,11 @@ pre.xml
     pre.xml
     { 
         overflow: hidden; 
-        font-size: 10px;
         word-wrap: break-word;
     }
     pre.csharp
     {
         overflow: hidden; 
-        font-size: 10px;
         word-wrap: break-word;
     }
 }
