--- a/web/syntax.css
+++ b/web/syntax.css
@@ -1,10 +1,3 @@
-html, body.example
-{
-    padding: 0px;
-    margin: 0px;
-    background-color: #fffff8;
-}
-
 pre.csharp
 {
     font-family: Consolas, Courier New;
@@ -34,7 +27,7 @@ pre.XML
     background-color: #f0f0ff;
 }
 
-pre.sql
+pre.SQL
 {
     font-family: Consolas, Courier New;
     font-size: 9pt;
